fix: scrollbar color

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    scrollbar-color: unset;
+}
+
 .container {
     max-width: 590px;
     min-width: 320px;
